[tool.poetry]
name = "discord-cleaner-bot"
version = "0.1.0"
description = "Discord bot to clean server channels and kick members."
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
discord.py = "^2.3.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
